--- a/calvin_models/requirements.txt
+++ b/calvin_models/requirements.txt
@@ -7,16 +7,16 @@ matplotlib
 opencv-python
 omegaconf
 plotly
+setuptools==57.5.0
 pyhash
 pytorch-lightning==1.8.6
 lightning_lite
-torch==1.13.1
+torch==1.13.1+cu113
 torchvision
 MulticoreTSNE
 gitpython
 scipy
 sentence-transformers
-setuptools==57.5.0
 gym
 moviepy
 tqdm
