--- a/calvin_models/requirements.txt
+++ b/calvin_models/requirements.txt
@@ -12,7 +12,8 @@ pyhash
 pytorch-lightning==1.8.6
 lightning_lite
 torch==1.12.1+cu113
-torchvision
+torchaudio==0.12.1+cu113
+torchvision==0.13.1+cu113
 MulticoreTSNE
 gitpython
 scipy
