change for docker

--- a/calvin_models/requirements.txt
+++ b/calvin_models/requirements.txt
@@ -11,8 +11,9 @@ setuptools==57.5.0
 pyhash
 pytorch-lightning==1.8.6
 lightning_lite
-torch==1.13.1+cu113
-torchvision
+torch==1.12.1+cu113
+torchaudio==0.12.1+cu113
+torchvision==0.13.1+cu113
 MulticoreTSNE
 gitpython
 scipy
